Add GetTransaction rpc call
